# arwiz

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  workspace.toml
.sisyphus/: boulder.json
.sisyphus/drafts/: profiler-optimizer.md
.sisyphus/notepads/arwiz-init/: learnings.md
.sisyphus/plans/: arwiz-init.md
bases/arwiz/api/: __init__.py  models.py
bases/arwiz/cli/: __init__.py
bases/arwiz/streamlit_ui/: __init__.py  app.py  state.py
components/arwiz/backend_selector/: __init__.py  core.py  interface.py  manifest.py
components/arwiz/config/: __init__.py  core.py  interface.py
components/arwiz/coverage_tracer/: __init__.py  ast_analyzer.py  core.py  interface.py
components/arwiz/decorator_injector/: __init__.py  core.py  import_hook.py  interface.py
examples/: 01_quickstart.py  02_real_world.py  03_api_usage.py  05_pandas_baseline.py  06_arwiz_comparison.py  07_multi_backend.py  api_curl.sh
test/: conftest.py  test_architecture.py
test/bases/: test_api.py  test_cli.py  test_streamlit_ui.py
test/components/: test_backend_manifest.py  test_backend_selector.py  test_config.py  test_coverage_tracer.py  test_decorator_injector.py  test_equivalence.py  test_hot_reload.py  test_hotspot.py  test_input_manager.py  test_llm_optimizer.py  test_llm_optimizer_manifest_context.py  test_orchestrator.py  test_pattern_detection.py  test_process_manager.py  test_profiler.py  test_template_optimizer.py  test_tier2_integration.py  test_tier3_integration.py
test/fixtures/: conftest.py  test_fixtures.py
test/integration/: test_cli_workflow.py  test_coverage_replay.py  test_e2e_backends.py  test_profile_optimize.py  test_smoke.py
(+77 files in other folders)
