[project]
name = "arwiz"
version = "0.1.0"
description = "AI-assisted Python profiler/optimizer tool"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "pyrefly>=0.52.0",
    "ruff>=0.15.1",
    "pytest-cov>=7.0.0",
    "pytest-benchmark>=5.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["projects/*"]

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.polylith.bricks]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "benchmark: Performance benchmark tests (skipped by default)",
]

[tool.pyrefly]
python_version = "3.13"

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "polylith-cli>=1.43.0",
]
